--- a/public/D3forcedirect.html
+++ b/public/D3forcedirect.html
@@ -23,10 +23,12 @@
             stroke-width: 1.5px;
         }
     </style>
+    <script src="d3.js"></script>
 </head>
 
 <body>
-    <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+    <!-- <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script> -->
+    <!-- <script src="d3.js" charset="utf-8"></script> -->
 
 
     <script>
