--- a/public/force.html
+++ b/public/force.html
@@ -26,8 +26,9 @@
 	</head>
 
 	<body>
-		<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
-
+		<!-- <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script> -->
+		<script src="d3.v3.min.js" charset="utf-8"></script>
+		<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/7.6.1/d3.js"></script> -->
 
 		<script>
 			// joey next step ?? select 标签部分加粗 - 其余部分不粗体 https://www.thinbug.com/q/44546656
