--- a/public/T2.html
+++ b/public/T2.html
@@ -52,24 +52,278 @@
 					[
 						// joey here 
 						{
-							id: "1",
-							name: "Root技能樹",
-							children: [
+							"id": 1,
+							"name": "Root技能樹",
+							"children": [
 								{
-									id: "2",
-									name: "擅長工具",
-									children: [
+									"id": 2,
+									"name": "擅長工具",
+									"children": [
 										{
-											id: "3",
-											name: "電腦輔助工程",
-											children: [
+											"id": 3,
+											"name": "電腦輔助工程",
+											"children": [
 												{
-													name: "icePak",
-													id: "4"
+													"id": 4,
+													"name": "icePak"
 												},
 												{
-													name: "Ansys",
-													id: "5"
+													"id": 5,
+													"name": "Ansys"
+												}
+											]
+										},
+										{
+											"name": "工程製圖",
+											"id": 6,
+											"children": [
+												{
+													"id": 7,
+													"name": "AutoCad 2D"
+												},
+												{
+													"id": 8,
+													"name": "Pro/E"
+												},
+												{
+													"id": 9,
+													"name": "SolidWorks"
+												}
+											]
+										},
+										{
+											"name": "辦公室應用",
+											"id": 10,
+											"children": [
+												{
+													"id": 11,
+													"name": "Access"
+												},
+												{
+													"id": 12,
+													"name": "Project"
+												},
+												{
+													"id": 13,
+													"name": "Excel"
+												},
+												{
+													"id": 14,
+													"name": "Xmind"
+												}
+											]
+										},
+										{
+											"name": "品保類",
+											"id": 15,
+											"children": [
+												{
+													"id": 16,
+													"name": "DFMEA"
+												},
+												{
+													"id": 17,
+													"name": "6 Sigma"
+												},
+												{
+													"id": 18,
+													"name": "SPC"
+												}
+											]
+										},
+										{
+											"name": "程式設計",
+											"id": 19,
+											"children": [
+												{
+													"id": 20,
+													"name": "javascript"
+												},
+												{
+													"id": 21,
+													"name": "Python"
+												},
+												{
+													"id": 22,
+													"name": "Visual Basic"
+												},
+												{
+													"id": 23,
+													"name": "C#"
+												}
+											]
+										}
+									]
+								},
+								{
+									"name": "工作技能",
+									"id": 24,
+									"children": [
+										{
+											"id": 25,
+											"name": "專案管理",
+											"children": [
+												{
+													"id": 26,
+													"name": "進度控管"
+												},
+												{
+													"id": 27,
+													"name": "專案溝通"
+												}
+											]
+										},
+										{
+											"id": 28,
+											"name": "機構設計",
+											"children": [
+												{
+													"id": 29,
+													"name": "電腦輔助設計"
+												},
+												{
+													"id": 30,
+													"name": "樣品圖樣"
+												},
+												{
+													"id": 31,
+													"name": "專利申請"
+												}
+											]
+										},
+										{
+											"name": "品質工程",
+											"id": 32,
+											"children": [
+												{
+													"id": 33,
+													"name": "半導體"
+												},
+												{
+													"id": 34,
+													"name": "電子散熱"
+												},
+												{
+													"id": 35,
+													"name": "TFTLCD"
+												}
+											]
+										},
+										{
+											"name": "團隊協調",
+											"id": 32,
+											"children": [
+												{
+													"id": 33,
+													"name": "人員培訓與激勵"
+												}
+											]
+										},
+										{
+											"name": "文件管理",
+											"id": 32,
+											"children": [
+												{
+													"id": 33,
+													"name": "資料庫程式設計"
+												},
+												{
+													"id": 33,
+													"name": "資料庫系統管理維護"
+												}
+											]
+										},
+										{
+											"name": "2次開發",
+											"id": 32,
+											"children": [
+												{
+													"id": 33,
+													"name": "TFT LCD 2次開發"
+												},
+												{
+													"id": 33,
+													"name": "Creo WebLink二次開發"
+												}
+											]
+										}
+									]
+								},
+								{
+									"name": "應變能力",
+									"id": 24,
+									"children": [
+										{
+											"id": 25,
+											"name": "機構工程師",
+											"children": [
+												{
+													"id": 26,
+													"name": "LCD新技術開發"
+												},
+												{
+													"id": 27,
+													"name": "散熱工程師"
+												},
+												{
+													"id": 27,
+													"name": "觸控展規劃"
+												},
+												{
+													"id": 27,
+													"name": "材料開發專員"
+												}
+											]
+										},
+										{
+											"id": 28,
+											"name": "產品 Benchmark",
+											"children": [
+												{
+													"id": 29,
+													"name": "專案協調"
+												},
+												{
+													"id": 30,
+													"name": "市場趨勢"
+												}
+											]
+										},
+										{
+											"name": "團隊協調",
+											"id": 32,
+											"children": [
+												{
+													"id": 33,
+													"name": "人員培訓與激勵"
+												}
+											]
+										},
+										{
+											"name": "文件管理",
+											"id": 32,
+											"children": [
+												{
+													"id": 33,
+													"name": "資料庫程式設計"
+												},
+												{
+													"id": 33,
+													"name": "資料庫系統管理維護"
+												}
+											]
+										},
+										{
+											"name": "2次開發",
+											"id": 32,
+											"children": [
+												{
+													"id": 33,
+													"name": "TFT LCD 2次開發"
+												},
+												{
+													"id": 33,
+													"name": "Creo WebLink二次開發"
 												}
 											]
 										}
